--- a/templates/index.html
+++ b/templates/index.html
@@ -44,8 +44,13 @@
         <br>
         <h3>Easy Integration, Secure Payments</h3>
         <p style="margin-right: 10%; margin-left: 10%;">
-            Through copy-pasting a single line of code you connect to the InAds global network and start monitizing your content.
+            Through copy-pasting a single line of code you connect to the InAds global network and start monetizing your content.
             Through adding simple HTML elements you can have unlimited customisation over the size and place of the advertisements on your webpage.
+        </p>
+        <h3>Cannot be blocked by ad blockers</h3>
+        <p style="margin-right: 10%; margin-left: 10%;">
+            So you are ready to monetize your web page through ads however many people today are using ad blockers which makes it impossible for you to generate advertising revenue.
+            However, InAds has your back its unique ad insertion policy makes it impossible for ad blockers to detect ads and thus makes ads impossible to block.
         </p>
     </center>
     <center style="background-color: rgb(230, 230, 235); height: 40%; margin-top: 5%">
