--- a/templates/estimated_earnings.html
+++ b/templates/estimated_earnings.html
@@ -14,7 +14,7 @@
         <a class="navbarElement" href="/plans"><small>Plans</small></a>
         <a class="navbarElement" href="/estimated_earnings"><small>Estimated Earnings</small></a>
         <a class="navbarElement" href=""><small>About</small></a>
-        <a class="navbarElement" href=""><small>Docs</small></a>
+        <a class="navbarElement" href="/docs"><small>Docs</small></a>
     </div>
 
     <h1 style="margin-left: 5%">Calculate your estimated earnings with InAds</h1>
