--- a/templates/docs.html
+++ b/templates/docs.html
@@ -13,8 +13,8 @@
             <a class="navbarElement" style="margin-left: 4%;" href="/"><small>Home Page</small></a>
             <a class="navbarElement" href="/plans"><small>Plans</small></a>
             <a class="navbarElement" href="/estimated_earnings"><small>Estimated Earnings</small></a>
-            <a class="navbarElement" href="/docs"><small>About</small></a>
-            <a class="navbarElement" href=""><small>Docs</small></a>
+            <a class="navbarElement" href=""><small>About</small></a>
+            <a class="navbarElement" href="/docs"><small>Docs</small></a>
         </div>
     <hr style="opacity: .3">
     <div style="margin-left: 5%">
