--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
             <a class="navbarElement" href="/plans"><small>Plans</small></a>
             <a class="navbarElement" href="/estimated_earnings"><small>Estimated Earnings</small></a>
             <a class="navbarElement" href=""><small>About</small></a>
-            <a class="navbarElement" href=""><small>Docs</small></a>
+            <a class="navbarElement" href="/docs"><small>Docs</small></a>
             <a class="navbarElement" style="float:right; margin-right: 5%;" href="/register">Register</a>
             <a class="navbarElement" style="float:right; margin-right: 2%;" href="/login">Login</a>
         </div>
