--- a/templates/plans.html
+++ b/templates/plans.html
@@ -14,7 +14,7 @@
             <a class="navbarElement" href="/plans"><small>Plans</small></a>
             <a class="navbarElement" href="/estimated_earnings"><small>Estimated Earnings</small></a>
             <a class="navbarElement" href=""><small>About</small></a>
-            <a class="navbarElement" href=""><small>Docs</small></a>
+            <a class="navbarElement" href="/docs"><small>Docs</small></a>
         </div>
         <hr style="opacity: .3">
     <h1 style="font-size: 5rem; margin-left: 5%">One Plan, Unlimited Possibilities</h1>
