--- a/templates/uploads.html
+++ b/templates/uploads.html
@@ -43,9 +43,9 @@
             <input class="mainFormBig" type=text name=keywords placeholder="Keywords with '/' in between.">
             <hr>
             <select class="mainFormBig" name="typeAd">
-                <option value="inadsbanner">Banner</option>
-                <option value="inadstandard">Rectangle</option>
-                <option value="inadsquare">Square</option>
+                <option value="inadsbanner">Banner(For vertically placed ads)</option>
+                <option value="inadstandard">Rectangle(For horizontally placed ads)</option>
+                <option value="inadsquare">Square(For square shaped ads)</option>
             </select>
             <hr>
             <br>
