--- a/templates/domainadd.html
+++ b/templates/domainadd.html
@@ -33,7 +33,7 @@
     <div style="float: left; width: 75%; margin-left: 4%">
         <h1>Add new domain</h1>
         <form method=post enctype=multipart/form-data>
-            <input class="mainFormBig" type=text name=domain placeholder="Domain name">
+            <input class="mainFormBig" type=text name=domain placeholder="Domain name with subdomain">
             <hr>
             <input class="mainFormBig" type=text name=keywords placeholder="Keywords with '/' in between.">
             <hr>
