--- a/templates/uploads.html
+++ b/templates/uploads.html
@@ -36,7 +36,7 @@
         <form method=post enctype=multipart/form-data>
             <input type=file name=file>
             <hr>
-            <input class="mainFormBig" type=text name=website placeholder="Advertisement Website URL">
+            <input class="mainFormBig" type=text name=website placeholder="Advertisement Website URL with https">
             <hr>
             <input class="mainFormBig" type=number name=budget placeholder="Campaign Budget">
             <hr>
