--- a/templates/docs.html
+++ b/templates/docs.html
@@ -24,7 +24,7 @@
         <br>
         Than Copy and paste the code bellow and start monetizing your website.
         <br>
-        <p style="background-color: rgb(230, 230, 235)">&lt;script src="https://www.inads.ml/inads">&lt;/script></p>
+        <p style="background-color: rgb(230, 230, 235)">&lt;script src="https://www.inads.ml/inads/&lt;yourwebsitename>">&lt;/script></p>
         The code above will place ads automatically. However you can customise the size, number and places of ads on your webpage as well. Use the code bellow to customize the ads.
         <p style="background-color: rgb(230, 230, 235)">&lt;img class=inads name=inadstandard></p>
         By changing the shape or size of the image you can customise the ads. You can place as many ads as you want. However you will not receive more view income from more than one ad on a page.
