--- a/templates/plans.html
+++ b/templates/plans.html
@@ -18,7 +18,7 @@
         </div>
         <hr style="opacity: .3">
     <h1 style="font-size: 5rem; margin-left: 5%">One Plan, Unlimited Possibilities</h1>
-    <h1 style="font-size: 3rem; margin-left: 5%">Start Monetizing your content now for 4.99$ <br> and 5x your income</h1>
+    <h1 style="font-size: 3rem; margin-left: 5%">Start Monetizing your content now for free <br> and 5x your income</h1>
     <button class="buttonBlue" style="margin-left: 5%" onclick="document.location = '/register'">Start Now</button>
 </body>
 </html>
