--- a/templates/register.html
+++ b/templates/register.html
@@ -42,6 +42,7 @@
                 <input style="margin-left: 40%; margin-right:0%; float: left; width: 12.5%" class="mainForm" type=text name=month placeholder="Month">
                 <input style="margin-right:0%; float: left; width: 12.5%" class="mainForm" type=text name=year placeholder="Year">
                 <input class="buttonGray" style="margin-left: 40%; margin-top: 1%" type=submit value="Register">
+                <small>Credit card information is collected to be able to store it for advertising payments no fees will apply</small>
             </div>
         </form>
     </div>
