--- a/templates/docs.html
+++ b/templates/docs.html
@@ -22,7 +22,7 @@
         First add your domain name to the InAds system through the add domain tap from the InAds dashboard.
         <br>
         <br>
-        Than Copy and paste the code bellow and start monetizing your website.
+        Place the code bellow at the bottom of your webpage's body
         <br>
         <p style="background-color: rgb(230, 230, 235)">&lt;script src="https://www.inads.ml/inads/&lt;writesomethinghere>">&lt;/script></p>
         The code above will place ads automatically. However you can customise the size, number and places of ads on your webpage as well. Use the code bellow to customize the ads. Replace &lt;writesomething here> whatever you want. This extra part of the url is just to increase its resistance against ad block.
