--- a/templates/docs.html
+++ b/templates/docs.html
@@ -26,8 +26,17 @@
         <br>
         <p style="background-color: rgb(230, 230, 235)">&lt;script src="https://www.inads.ml/inads/&lt;writesomethinghere>">&lt;/script></p>
         The code above will place ads automatically. However you can customise the size, number and places of ads on your webpage as well. Use the code bellow to customize the ads. Replace &lt;writesomething here> whatever you want. This extra part of the url is just to increase its resistance against ad block.
-        <p style="background-color: rgb(230, 230, 235)">&lt;img class=inads name=inadstandard></p>
-        By changing the shape or size of the image you can customise the ads. You can place as many ads as you want. However you will not receive more view income from more than one ad on a page.
+        <p style="background-color: rgb(230, 230, 235)">&lt;img class=inads name=&lt;shape>></p>
+        There are three different ad shapes:
+        <br>
+        <ul>
+            <li>inadstandard: width:height = 5:1</li>
+            <li>inadsquare: width:height = 1:1</li>
+            <li>inadsbanner: width:height = 1:5</li>
+        </ul>
+        By choosing one of the ad types listed above you can pick the shape of the ad you want to display and by setting the margins of the elements your can place them wherever you want. You can place as many ads as you want.
+        <br>
+        <strong>Important Warning: Always place the script element inside your body tags and bellow the img elements</strong>
     </div>
     <center><button class="buttonBlue" style="margin-left: 5%; margin-top: 50vh" onclick="document.location = '/register'">Start Now</button></center>
 </body>
