--- a/templates/payout.html
+++ b/templates/payout.html
@@ -38,7 +38,7 @@
 
     <div style="float: left; width: 75%; margin-left: 4%">
         <h1>Receive Payout</h1>
-        <h2>Current account balance: {{ user.account_balance }} $</h2>
+        <h2>Current account balance: {{ "%.2f" % user.account_balance }} $</h2>
         <form method=post enctype=multipart/form-data>
             <input class="mainFormBig" style="width: 100%" type=text name=name placeholder="Account holder full name">
             <hr>
