--- a/templates/domainadd.html
+++ b/templates/domainadd.html
@@ -32,6 +32,8 @@
 
     <div style="float: left; width: 75%; margin-left: 4%">
         <h1>Add new domain</h1>
+        How to add a domain? <a href="/docs">Visit docs.</a>
+        Download <a href="/confirmationfile">confirmation file</a>
         <form method=post enctype=multipart/form-data>
             <input class="mainFormBig" type=text name=domain placeholder="Domain name with subdomain">
             <hr>
