--- a/templates/docs.html
+++ b/templates/docs.html
@@ -37,6 +37,9 @@
         By choosing one of the ad types listed above you can pick the shape of the ad you want to display and by setting the margins of the elements your can place them wherever you want. You can place as many ads as you want.
         <br>
         <strong>Important Warning: Always place the script element inside your body tags and bellow the img elements</strong>
+        <h3>How to add a domain?</h3>
+        <p>Make sure to download the inadsconfirm.txt file from domain add page of your dashboard and add it to the your website as inadsconfirm.txt without any change.</p>
+        <p>Than add the domain to the database by filing the form. Your domain will be confirmed if the inadsconfirm.txt file can be detected in your website and you will be ready to monetize your website.</p>
     </div>
     <center><button class="buttonBlue" style="margin-left: 5%; margin-top: 50vh" onclick="document.location = '/register'">Start Now</button></center>
 </body>
