--- a/templates/domainadd.html
+++ b/templates/domainadd.html
@@ -36,7 +36,7 @@
         <br>
         Download <a href="/confirmationfile">confirmation file</a>
         <br>
-        <form method=post enctype=multipart/form-data>
+        <form method=post enctype=multipart/form-data style="margin-top: 5%">
             <input class="mainFormBig" type=text name=domain placeholder="Domain name with subdomain">
             <hr>
             <input class="mainFormBig" type=text name=keywords placeholder="Keywords with '/' in between.">
