--- a/templates/register.html
+++ b/templates/register.html
@@ -18,8 +18,8 @@
     <center>
         <img src="https://firebasestorage.googleapis.com/v0/b/file-store-6094b.appspot.com/o/files%2F9130410?alt=media&token=709b6728-023d-4c7e-b118-d459bc2794c3" style="width: 15%; height: 20%; margin-top: 15%" alt="">
     </center>
-    <div style="border-color: yellow; border-style: solid; margin-top: 3%">
-        <form id="form-id" method=post enctype=multipart/form-data style="border-style: solid; border-radius: 5px; border-color: black;">
+    <div style="margin-top: 3%">
+        <form id="form-id" method=post enctype=multipart/form-data>
             <div id="form-mail-registration">
                 <input style="margin-left: 40%; margin-right:35%; float: left" class="mainForm" type=text name=email placeholder="Email">
                 <hr style="margin-left: 40%; margin-right:35%">
