--- a/templates/register.html
+++ b/templates/register.html
@@ -35,12 +35,12 @@
                 <input class="buttonGray" style="margin-left: 40%" type=button onclick="sendForm()" value="Register">
             </div>
             <div id="form-credit-registration" hidden="true">
-                <input style="margin-left: 40%; margin-right:35%; float: left" class="mainForm" type=text inputmode="numeric" pattern="[0-9\s]{13,19}" name=credit placeholder="Card Number">
+                <input style="margin-left: 40%; margin-right:35%; float: left" class="mainForm" type=number inputmode="numeric" pattern="[0-9\s]{13,19}" name=credit placeholder="Card Number">
                 <hr style="margin-left: 40%; margin-right:35%">
-                <input style="margin-left: 40%; margin-right:35%; float: left" class="mainForm" type=text name=cvc placeholder="CVC">
+                <input style="margin-left: 40%; margin-right:35%; float: left" class="mainForm" type=number name=cvc placeholder="CVC">
                 <hr style="margin-left: 40%; margin-right:35%">
-                <input style="margin-left: 40%; margin-right:0%; float: left; width: 12.5%" class="mainForm" type=text name=month placeholder="Month">
-                <input style="margin-right:0%; float: left; width: 12.5%" class="mainForm" type=text name=year placeholder="Year">
+                <input style="margin-left: 40%; margin-right:0%; float: left; width: 12.5%" class="mainForm" type=number name=month placeholder="Month">
+                <input style="margin-right:0%; float: left; width: 12.5%" class="mainForm" type=number name=year placeholder="Year">
                 <input class="buttonGray" style="margin-left: 40%; margin-top: 1%" type=submit value="Register">
                 <br>
                 <small>Credit card information is collected to be able to store it for advertising payments no fees will apply</small>
