--- a/templates/loadmoney.html
+++ b/templates/loadmoney.html
@@ -31,7 +31,7 @@
     </div>
     <div style="float: left; width: 75%; margin-left: 4%">
         <h1 style="margin-left: 10%">Increase your account balance</h1>
-        <form method=post enctype=multipart/form-data style="border-style: solid; border-radius: 5px; border-color: black;">
+        <form method=post enctype=multipart/form-data>
             <input style="margin-left: 10%; margin-right:35%; width: 55%" class="mainForm" type=number name=amount placeholder="Amount in USD" pattern="[0-9]">
             <hr style="margin-left: 10%; margin-right:35%">
             <input style="margin-left: 10%; margin-right:35%; width: 55%"  class="mainForm" type=password name=password placeholder="Password for confirmation">
