--- a/templates/estimated_earnings.html
+++ b/templates/estimated_earnings.html
@@ -28,10 +28,9 @@
 
     <script>
         function calculate(){
-            var visitrev = document.getElementById("monthlyvis").value * 0.002
-            var clickrev = document.getElementById("monthlyvis").value * 0.20 * 0.15
-            var outcomefinal = visitrev + clickrev
-            document.getElementById("outcome").innerHTML = outcomefinal + " $"
+            var revestimate = document.getElementById("monthlyvis").value * 0.002
+            var revestimate2 = document.getElementById("monthlyvis").value * 0.20 * 0.15
+            document.getElementById("outcome").innerHTML = revestimate + revestimate2 + " $"
         }
     </script>
 </body>
