--- a/templates/estimated_earnings.html
+++ b/templates/estimated_earnings.html
@@ -22,14 +22,14 @@
     <input style="margin-left: 5%" onchange="calculate()" type="number" id="monthlyvis" class="mainForm" placeholder="Number of monthly visitors">
     <hr style="margin-left: 5%; margin-right: 70%">
     <br>
-    <strong style="margin-left: 5%">*These estimates do not represent the actual numbers. Just an estimate of your earnings.</strong>
+    <strong style="margin-left: 5%">*These estimates do not represent the actual numbers. Just an estimate of your earnings. This estimate assumes there are more than one ad spots on your web page</strong>
     <br>
     <h1 style="font-size: 4rem; margin-left: 5%" id="outcome"></h1>
 
     <script>
         function calculate(){
             var revestimate = document.getElementById("monthlyvis").value * 0.002
-            var revestimate2 = document.getElementById("monthlyvis").value * 0.20 * 0.30
+            var revestimate2 = document.getElementById("monthlyvis").value * 0.20 * 0.15
             document.getElementById("outcome").innerHTML = revestimate + revestimate2 + " $"
         }
     </script>
