--- a/templates/estimated_earnings.html
+++ b/templates/estimated_earnings.html
@@ -22,7 +22,7 @@
     <input style="margin-left: 5%" onchange="calculate()" type="number" id="monthlyvis" class="mainForm" placeholder="Number of monthly visitors">
     <hr style="margin-left: 5%; margin-right: 70%">
     <br>
-    <strong style="margin-left: 5%">*These estimates do not represent the actual numbers. Just an estimate of your earnings. This estimate assumes there are more than one ad spots on your web page</strong>
+    <strong style="margin-left: 5%">*These estimates do not represent the actual numbers. Just an estimate of your earnings. This estimate assumes there are more than one ad spots on your web page. You can place as many ads as you want to in your web page.</strong>
     <br>
     <h1 style="font-size: 4rem; margin-left: 5%" id="outcome"></h1>
 
