--- a/templates/plans.html
+++ b/templates/plans.html
@@ -21,6 +21,6 @@
     <h1 style="font-size: 3rem; margin-left: 5%">Start Monetizing your content now for free <br> and 5x your income</h1>
     <button class="buttonBlue" style="margin-left: 5%" onclick="document.location = '/register'">Start Now</button>
     <h1 style="font-size: 3rem; margin-left: 5%">Advertising Fees</h1>
-    <h3 style="margin-left: 5%">20 Cents per ad click and 0.2 cents per view.</h3>
+    <h3 style="margin-left: 5%">20 Cents per ad click and 0.2 cents per view. It's that simple no high level maths and no scam.</h3>
 </body>
 </html>
