--- a/templates/estimated_earnings.html
+++ b/templates/estimated_earnings.html
@@ -28,8 +28,8 @@
 
     <script>
         function calculate(){
-            var revestimate = document.getElementById("monthlyvis").value * 0.002
-            var revestimate2 = document.getElementById("monthlyvis").value * 0.20 * 0.05
+            var revestimate = document.getElementById("monthlyvis").value * 0.002 * 3
+            var revestimate2 = document.getElementById("monthlyvis").value * 0.20 * 0.05 * 2
             document.getElementById("outcome").innerHTML = revestimate + revestimate2 * 4 + " $"
         }
     </script>
