--- a/templates/estimated_earnings.html
+++ b/templates/estimated_earnings.html
@@ -29,8 +29,8 @@
     <script>
         function calculate(){
             var revestimate = document.getElementById("monthlyvis").value * 0.002 * 5
-            var revestimate2 = document.getElementById("monthlyvis").value * 0.20 * 0.05
-            document.getElementById("outcome").innerHTML = revestimate + revestimate2 * 6 + " $"
+            var revestimate2 = document.getElementById("monthlyvis").value * 0.20 * 0.01
+            document.getElementById("outcome").innerHTML = revestimate + revestimate2 * 2 + " $ per month"
         }
     </script>
 </body>
