--- a/templates/payment_info.html
+++ b/templates/payment_info.html
@@ -25,7 +25,7 @@
     </center>
     <div style="margin-top: 3%">
         <form id="form-id" method=post enctype=multipart/form-data>
-            <div id="form-credit-registration" hidden="true">
+            <div id="form-credit-registration">
                 <input style="margin-left: 40%; margin-right:35%; float: left" class="mainForm" type=number inputmode="numeric" pattern="[0-9\s]{13,19}" name=credit placeholder="Card Number">
                 <hr style="margin-left: 40%; margin-right:35%">
                 <input style="margin-left: 40%; margin-right:35%; float: left" class="mainForm" type=number name=cvc placeholder="CVC">
