--- a/templates/payment_info.html
+++ b/templates/payment_info.html
@@ -33,7 +33,9 @@
                 <input style="margin-left: 40%; margin-right:0%; float: left; width: 12.5%" class="mainForm" type=number name=month placeholder="Month">
                 <input style="margin-right:0%; float: left; width: 12.5%" class="mainForm" type=number name=year placeholder="Year">
                 <br>
-                <small>Credit card information is collected to be able to store it for advertising payments no fees will apply</small>
+                <center>
+                    <small>Credit card information is collected to be able to store it for advertising payments no fees will apply</small>
+                </center>
             </div>
         </form>
     </div>
