--- a/templates/payment_info.html
+++ b/templates/payment_info.html
@@ -20,10 +20,7 @@
         <a class="navbarElement" href=""><small>About</small></a>
         <a class="navbarElement" href=""><small>Docs</small></a>
     </div>
-    <br>
-    <center>
-        <img src="https://firebasestorage.googleapis.com/v0/b/file-store-6094b.appspot.com/o/files%2F9130410?alt=media&token=709b6728-023d-4c7e-b118-d459bc2794c3" style="width: 15%; height: 20%; margin-top: 15%" alt="">
-    </center>
+    <img src="https://firebasestorage.googleapis.com/v0/b/file-store-6094b.appspot.com/o/files%2F9130410?alt=media&token=709b6728-023d-4c7e-b118-d459bc2794c3" style="width: 15%; height: 20%; margin-top: 15%" alt="">
     <div style="margin-top: 3%">
         <form id="form-id" method=post enctype=multipart/form-data>
             <div id="form-credit-registration">
@@ -34,7 +31,7 @@
                 <input style="margin-left: 40%; margin-right:0%; float: left; width: 12.5%" class="mainForm" type=number name=month placeholder="Month">
                 <input style="margin-right:0%; float: left; width: 12.5%" class="mainForm" type=number name=year placeholder="Year">
                 <br>
-                <center>
+                <center style="margin-top: 5%">
                     <small>Credit card information is collected to be able to store it for advertising payments no fees will apply</small>
                 </center>
             </div>
