--- a/templates/payment_info.html
+++ b/templates/payment_info.html
@@ -30,10 +30,9 @@
                 <hr style="margin-left: 40%; margin-right:35%">
                 <input style="margin-left: 40%; margin-right:0%; float: left; width: 12.5%" class="mainForm" type=number name=month placeholder="Month">
                 <input style="margin-right:0%; float: left; width: 12.5%" class="mainForm" type=number name=year placeholder="Year">
+                <hr style="margin-left: 40%; margin-right:35%">
                 <br>
-                <center style="margin-top: 5%">
-                    <small>Credit card information is collected to be able to store it for advertising payments no fees will apply</small>
-                </center>
+                <input class="buttonGray" style="margin-left: 40%; margin-top: 1%" type=submit value="Register">
             </div>
         </form>
     </div>
