--- a/templates/payment_info.html
+++ b/templates/payment_info.html
@@ -20,7 +20,9 @@
         <a class="navbarElement" href=""><small>About</small></a>
         <a class="navbarElement" href=""><small>Docs</small></a>
     </div>
-    <img src="https://firebasestorage.googleapis.com/v0/b/file-store-6094b.appspot.com/o/files%2F9130410?alt=media&token=709b6728-023d-4c7e-b118-d459bc2794c3" style="width: 15%; height: 20%; margin-top: 15%" alt="">
+    <center>
+        <img src="https://firebasestorage.googleapis.com/v0/b/file-store-6094b.appspot.com/o/files%2F9130410?alt=media&token=709b6728-023d-4c7e-b118-d459bc2794c3" style="width: 15%; height: 20%; margin-top: 15%" alt="">
+    </center>
     <div style="margin-top: 3%">
         <form id="form-id" method=post enctype=multipart/form-data>
             <div id="form-credit-registration">
