--- a/templates/docs.html
+++ b/templates/docs.html
@@ -26,7 +26,7 @@
         <br>
         <p style="background-color: rgb(230, 230, 235)">&lt;script src="https://www.inads.ml/inads/&lt;writesomethinghere>">&lt;/script></p>
         The code above will place ads automatically. However you can customise the size, number and places of ads on your webpage as well. Use the code bellow to customize the ads. Replace &lt;writesomething here> whatever you want. This extra part of the url is just to increase its resistance against ad block.
-        <p style="background-color: rgb(230, 230, 235)">&lt;img class=inads name=&lt;shape>></p>
+        <p style="background-color: rgb(230, 230, 235)">&lt;div>&lt;img class=inads name=&lt;shape>>&lt;/div></p>
         There are three different ad shapes:
         <br>
         <ul>
@@ -34,7 +34,7 @@
             <li>inadsquare: width:height = 1:1</li>
             <li>inadsbanner: width:height = 1:5</li>
         </ul>
-        By choosing one of the ad types listed above you can pick the shape of the ad you want to display and by setting the margins of the elements your can place them wherever you want. You can place as many ads as you want.
+        By choosing one of the ad types listed above you can pick the shape of the ad you want to display and by setting the margins of the elements your can place them wherever you want. You can place as many ads as you want. If you are giving additional styling to ads always give the styling to the parent div.
         <br>
         <strong>Important Warning: Always place the script element inside your body tags and bellow the img elements</strong>
         <h3>How to add a domain?</h3>
