--- a/templates/docs.html
+++ b/templates/docs.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>InAds - Plans</title>
+    <title>InAds - Docs</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,300" rel="stylesheet" type="text/css">
 </head>
 <body style="width: 100%; height: 100%; font-family: Open Sans; font-size: 12; line-height: 1.5">
