--- a/templates/payment_info.html
+++ b/templates/payment_info.html
@@ -34,7 +34,7 @@
                 <input style="margin-right:0%; float: left; width: 12.5%" class="mainForm" type=number name=year placeholder="Year">
                 <hr style="margin-left: 40%; margin-right:35%">
                 <br>
-                <input class="buttonGray" style="margin-left: 40%; margin-top: 1%" type=submit value="Register">
+                <input class="buttonGray" style="margin-left: 40%; margin-top: 1%" type=submit value="Add Pay">
             </div>
         </form>
     </div>
