--- a/templates/index.html
+++ b/templates/index.html
@@ -33,8 +33,8 @@
         <h1>Why InAds?</h1>
         <br>
         <h3>Make money from your website</h3>
-        <p style="margin-right: 10%; margin-left: 10%;">Unlike many advertising networks, InAds utilizes a subscription system as a way of generating income.
-            With no commission or extra fees on your income make 15 Cents per click.
+        <p style="margin-right: 10%; margin-left: 10%;">Unlike many advertising networks, InAds adopts a no commission policy.
+            With no commission or extra fees on your income and make 20 Cents per click.
             Your income will skyrocket after switching to InAds.</p>
         <br>
         <h3>Cheaper Cost of Advertising</h3>
