--- a/templates/uploads.html
+++ b/templates/uploads.html
@@ -40,7 +40,7 @@
             <hr>
             <input class="mainFormBig" type=number name=budget placeholder="Campaign Budget">
             <hr>
-            <input class="mainFormBig" type=text name=keywords placeholder="Keywords with '/' in between.">
+            <input class="mainFormBig" type=text name=keywords placeholder="Specifically Targeted Keywords with '/' in between.">
             <hr>
             <select class="mainFormBig" name="typeAd">
                 <option value="inadsbanner">Banner(For vertically placed ads)</option>
