--- a/templates/uploads.html
+++ b/templates/uploads.html
@@ -36,16 +36,16 @@
         <form method=post enctype=multipart/form-data>
             <input type=file name=file>
             <hr>
-            <input class="mainFormBig" type=text name=website placeholder="Advertisement Website URL with https">
+            <input class="mainFormBig" type=text name=website placeholder="Advertisement Web Page URL">
             <hr>
-            <input class="mainFormBig" type=number name=budget placeholder="Campaign Budget">
+            <input class="mainFormBig" type=number name=budget placeholder="Campaign Total Budget">
             <hr>
-            <input class="mainFormBig" style="width: 90%" type=text name=keywords placeholder="Specifically Targeted Keywords with '/' in between.">
+            <input class="mainFormBig" style="width: 90%" type=text name=keywords placeholder="Targeted Keywords with '/' in between.">
             <hr>
             <select class="mainFormBig" name="typeAd">
                 <option value="inadsbanner">Banner(For vertically placed ads)</option>
                 <option value="inadstandard">Rectangle(For horizontally placed ads)</option>
-                <option value="inadsquare">Square(For square shaped ads)</option>
+                <option value="inadsquare">Square</option>
             </select>
             <hr>
             <br>
