--- a/templates/uploads.html
+++ b/templates/uploads.html
@@ -56,7 +56,7 @@
         </form>
     </div>
     <script>
-        function() filenamer{
+        function filenamer(){
             document.getElementById("uploadButton").innerHTML = "File Selected"
         }
     </script>
