--- a/templates/index.html
+++ b/templates/index.html
@@ -53,6 +53,9 @@
             So you are ready to monetize your web page through ads however many people today are using ad blockers which makes it impossible for you to generate advertising revenue.
             However, InAds has your back its unique ad insertion policy makes it impossible for ad blockers to detect ads and thus makes ads impossible to block.
         </p>
+        <br>
+        <h3>Number of ads matter</h3>
+        <p>Unlike Google Adsense's "A page view is what Google counts in your reports every time a user views a page displaying Google ads. We will count one page view regardless of the number of ads displayed on that page." policy your website generates income for every single ad on your web page.</p>
     </center>
     <center style="background-color: rgb(230, 230, 235); height: 40%; margin-top: 5%">
         <p style="opacity: 0">InAds</p>
