--- a/templates/index.html
+++ b/templates/index.html
@@ -55,7 +55,7 @@
         </p>
         <br>
         <h3>Number of ads matter</h3>
-        <p>Unlike Google Adsense's "A page view is what Google counts in your reports every time a user views a page displaying Google ads. We will count one page view regardless of the number of ads displayed on that page." policy your website generates income for every single ad on your web page.</p>
+        <p>Unlike Google Adsense's or many other ad networks' "A page view is what is counted in your reports every time a user views a page displaying ads. We will count one page view regardless of the number of ads displayed on that page." policy your website generates income for every single ad on your web page.</p>
     </center>
     <center style="background-color: rgb(230, 230, 235); height: 40%; margin-top: 5%">
         <p style="opacity: 0">InAds</p>
