--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="/styles">
 </head>
 <body style="font-family: open sans; margin: 0;">
-    <div style="min-height: 100vh; background-color: rgba(250, 250, 0, 0.05); width: 20%; border-right:1px solid rgba(150, 150, 150, .5); float: left">
+    <div style="min-height: 100vh; background-color: rgba(250, 250, 0, 0.05); width: 20%; border-right:1px solid rgba(150, 150, 150, .5); float: left; position: fixed">
         <div style="color: black; margin-left: 25%;">
             <br>
             {{ user.email }}
@@ -29,7 +29,7 @@
             {% endif %}
         </div>
     </div>
-    <div style="float: left; width: 79%">
+    <div style="float: left; width: 79%; margin-left: 20%">
         <div style="width: 100%">
             <h1 style="font-size: 2rem; margin-left: 5%; float: left">Account Balance</h1>
             <h1 style="font-size: 2rem; margin-right: 5%; float: right">{{ "%.2f" % user.account_balance }} $</h1>
