--- a/templates/domainadd.html
+++ b/templates/domainadd.html
@@ -7,7 +7,7 @@
 </head>
 
 <body style="font-family: open sans; margin: 0;">
-    <div style="min-height: 100vh; background-color: rgba(250, 250, 0, 0.05); width: 20%; border-right:1px solid rgba(150, 150, 150, .5); float: left">
+    <div style="min-height: 100vh; background-color: rgba(250, 250, 0, 0.05); width: 20%; border-right:1px solid rgba(150, 150, 150, .5); float: left; position: fixed">
         <div style="color: black; margin-left: 25%;">
             <br>
             {{ user.email }}
@@ -30,7 +30,7 @@
         </div>
     </div>
 
-    <div style="float: left; width: 75%; margin-left: 4%">
+    <div style="float: left; width: 75%; margin-left: 24%">
         <h1>Add new domain</h1>
         How to add a domain? <a href="/docs">Visit docs.</a>
         <br>
