--- a/templates/uploads.html
+++ b/templates/uploads.html
@@ -81,7 +81,7 @@
             document.getElementById("uploadButton").innerHTML = "File Selected"
         }
 
-        function addKeyword(var insertKey){
+        function addKeyword(insertKey){
              "/" + docuemnt.getElementById("keywordsInput").value(insertKey)
         }
     </script>
